改版商店页面

--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -13,118 +13,116 @@
                              class="lazy showimglist"
                              data-imglist="<?php echo implode(',',$info['imglist']);?>"
                              alt="" style="width: 100%">
-                        <else/>
-                        <div class="swiper-slide swiper-slide-active">
-                            <div class="swiper-slide-center-text">>_<<br>谁给我一张靓照</div>
-                            <img src="__PUBLIC__/images/nopic.png" alt="" style="width: 100%">
-                        </div>
                     </if>
-
-                </div>
-                <div class="yspanel-content-box">
-                    <div class="flex flex-align-center yspanel-titlebox">
-                        <h3 class="text-center flex-1">{$info['name']}</h3>
-                        <if condition="($info['price']) and ($info['price'] neq 0)">
-                        <div class="pricebox orange-text">￥{$info['price']}+</div>
-                        </if>
-                    </div>
-                    <div class="flex">
-                        <if condition="$info['isLike']">
-                            <a class="btnitem ysbtn flex-1 hover"data-id="{$info['id']}">
-                                <i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span>
-                            </a>
-                            <else/>
-                            <a class="btnitem ysbtn flex-1 likebtn" data-id="{$info['id']}">
-                                <i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span>
-                            </a>
-                        </if>
-                    </div>
-                    <div class="content-block">
-                        <a href="tel:{$info['phone']}" class="weui_btn weui_btn_primary">拨打电话</a>
-                    </div>
-                    <div class="margin-top"></div>
-                    <table class="ystable table table-bordered">
-                        <volist name="info.other_info" id="other">
-                            <tr>
-                                <td style="text-align: center;">{$other['name']}</td>
-                                <td>{$other['val']}</td>
-                            </tr>
-                        </volist>
-                        <tr>
-                            <td colspan="2">
-                                {$info['address']}
-                                <if condition="$info['lat'] and $info['lng']">
-                                    <a href="javascript:;"
-                                       class="pull-right lookmap"
-                                       data-lat="{$info['lat']}"
-                                       data-lng="{$info['lng']}"
-                                       data-name="{$info['name']}"
-                                       data-address="{$info['address']}">
-                                        查看地图
-                                    </a>
-                                </if>
-                            </td>
-                        </tr>
-                    </table>
-                    <div class="margin-top" style="padding: 10px 0;">
-                        {$info['intro']}<br>
-                        联系我时，请说是在店多多看到的，谢谢！<br>
-                        好店铺别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
-                    </div>
                 </div>
 
-                <div class="hot-activity-box">
-                    <volist name="list" id="info">
-                        <if condition="$info['imgUrl']">
-                            <div class="activity-goods-box flex flex-align-center glistImg" style="padding: 10px;">
-                                <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk">
-                                    <img class="activity-goods-img im" src="{$info['imgUrl']}" />
-                                </a>
-                                <div class="activity-goods-infobox flex-1">
-                                    <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']) )}" class="black-text lk">
-                                        <h3 class="text-line2 new-activity-title-box nn">{$info['name']}</h3>
-                                    </a>
-                                    <div class="price" style="margin-top: -5px;">
-                                        特价：<span class="pp main-price">{$info['price']}</span>
-                                        <div class="price-value remove-text op">{$info['original_price']}</div>
-                                    </div>
-                                    <div class="activity-goods-btns">
-                                        <div class="activity-goods-btn">
-                                            <a class="activity-btn like likebtn lb" href="javascript:;" data-id="{$info['id']}">
-                                                <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="activity-shopname gray-text2">来自：<span class="red-text sn">{$info['shopName']}</span></div>
-                                </div>
-                            </div>
-                            <else/>
-                            <div class="activity-goods-box-nopic glist">
-                                <a class="text-line2 goods-title lk nn" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}?dd=1">
-                                    {$info['name']}
-                                </a>
-                                <div class="activity-goods-infobox flex">
-                                    <a class="activity-goods-contentBox flex-1 lk" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}">
-                                        <p class="activity-goods-price">
-                                            特价：<span class="pp main-price">{$info['price']}</span>
-                                        <div class="price-value remove-text op">{$info['original_price']}</div>
-                                        </p>
-                                        <div class="activity-shopname gray-text">来自：<span class="orange-text sn">{$info['shopName']}</span></div>
-                                    </a>
-                                    <div class="like-box">
-                                        <div class="activity-btn like likebtn lb" data-id="{$info['id']}">
-                                            <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </if>
-                    </volist>
+                <div class="yspanel-line">
+                    <h3 class="text-center flex-1">{$info['name']}</h3>
+                </div>
 
-
+                <div class="yspanel-line">
+                    <div class="flex flex-align-center">
+                        <a href="javascript:;"
+                           class="flex-1 lookmap"
+                           style="display: block;"
+                           data-lat="{$info['lat']}"
+                           data-lng="{$info['lng']}"
+                           data-name="{$info['name']}"
+                           data-address="{$info['address']}">
+                            {$info['address']}
+                        </a>
+                        <a href="tel:{$info['phone']}" class="ysbtn hover">拨打电话</a>
+                    </div>
                 </div>
             </div>
 
+            <div class="yspanel margin-top30">
+                <div class="yspanel-line">
+                    <h3 class="gray-text1 small-text">商家介绍</h3>
+                </div>
+                <div class="yspanel-line">
+                    {$info['intro']}<br>
+                    联系我时，请说是在店多多看到的，谢谢！<br>
+                    好店铺别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
+                </div>
+            </div>
+
+            <notempty name="couponList">
+                <div class="yspanel margin-top30">
+                    <div class="yspanel-line">
+                        <h3 class="gray-text1 small-text">代金券免费领</h3>
+                    </div>
+                    <div class="yspanel-line">
+                        <volist name="couponList" id="info">
+                            <a class="coupon-item col-50" href="{:UC('Activity/couponDetail',array('id'=>$info['id']))}">
+                                <div class="coupon-price">{$info['amount']}</div>
+                                <p class="coupon-title">
+                                    {$info['name']}
+                                    <br>
+                                    点击进入领取
+                                </p>
+                                <div class="coupon-moreInfo">
+                                    已抢：{$info['readyCount']}，剩余：<span class="red-text">{$info['leftCount']}</span>
+                                </div>
+                            </a>
+                        </volist>
+                    </div>
+                </div>
+            </notempty>
+
+            <notempty name="list">
+                <div class="yspanel margin-top30">
+                    <div class="yspanel-line">
+                        <h3 class="gray-text1 small-text">特色商品</h3>
+                    </div>
+                    <div class="hot-activity-box">
+                        <volist name="list" id="info">
+                            <if condition="$info['imgUrl']">
+                                <div class="activity-goods-box flex flex-align-center glistImg" style="padding: 10px;">
+                                    <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk">
+                                        <img class="activity-goods-img im" src="{$info['imgUrl']}" />
+                                    </a>
+                                    <div class="activity-goods-infobox flex-1">
+                                        <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']) )}" class="black-text lk">
+                                            <h3 class="text-line2 new-activity-title-box nn">{$info['name']}</h3>
+                                        </a>
+                                        <div class="price" style="margin-top: -5px;">
+                                            特价：<span class="pp main-price">{$info['price']}</span>
+                                            <div class="price-value remove-text op">{$info['original_price']}</div>
+                                        </div>
+                                        <div class="activity-goods-btns">
+                                            <div class="activity-goods-btn">
+                                                <a class="activity-btn like likebtn lb" href="javascript:;" data-id="{$info['id']}">
+                                                    <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="activity-shopname gray-text2">来自：<span class="red-text sn">{$info['shopName']}</span></div>
+                                    </div>
+                                </div>
+                                <else/>
+                                <div class="activity-goods-box-nopic glist">
+                                    <a class="text-line2 goods-title lk nn" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}?dd=1">
+                                        {$info['name']}
+                                    </a>
+                                    <div class="activity-goods-infobox flex">
+                                        <a class="activity-goods-contentBox flex-1 lk" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}">
+                                            特价：<span class="pp main-price">{$info['price']}</span>
+                                            <div class="price-value remove-text op">{$info['original_price']}</div>
+                                            <div class="activity-shopname gray-text">来自：<span class="orange-text sn">{$info['shopName']}</span></div>
+                                        </a>
+                                        <div class="like-box">
+                                            <div class="activity-btn like likebtn lb" data-id="{$info['id']}">
+                                                <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </if>
+                        </volist>
+                    </div>
+                </div>
+            </notempty>
 
 
             <p class="gray-text1 text-center small-text margin-top30">
