--- a/Application/Phone/View/Miaoji/famousShop.html
+++ b/Application/Phone/View/Miaoji/famousShop.html
@@ -47,6 +47,7 @@
                 </div>
             </div>
 
+            <notempty name="couponList">
             <div class="yspanel margin-top30">
                 <div class="yspanel-line">
                     <h3 class="gray-text1 small-text">代金券免费领</h3>
@@ -67,7 +68,9 @@
                     </volist>
                 </div>
             </div>
+            </notempty>
 
+            <notempty name="list">
             <div class="yspanel margin-top30">
                 <div class="yspanel-line">
                     <h3 class="gray-text1 small-text">特色商品</h3>
@@ -119,6 +122,7 @@
                     </volist>
                 </div>
             </div>
+            </notempty>
 
 
             <p class="gray-text1 text-center small-text margin-top30">
