修改分享逻辑，使其可以自定义图片。加入测试分享逻辑

--- a/Application/Phone/View/Test/testShare.html
+++ b/Application/Phone/View/Test/testShare.html
@@ -14,6 +14,7 @@
                 var shareIntro = "{$share.intro}";
                 var shareTitle = "{$share.title}";
                 var shareImg = "{$share.shareImg}";
+                var shareUrl = "{$share.url}";
             </script>
 
 
