--- a/Application/Phone/View/User/couponUser.html
+++ b/Application/Phone/View/User/couponUser.html
@@ -10,12 +10,12 @@
                 <empty name="list">
                     您还没有领取优惠券哦，赶快去<a href="{:UC('Activity/couponList')}" class="external">抢优惠券</a>吧
                     <else/>
-                    可别浪费自己的优惠券哦，您可以点击<a href="{:UC('Activity/hotActivity')}">这里看看</a>更多的优惠信息。
+                    可别浪费自己的优惠券哦，点击优惠券可以了解更多信息。
                 </empty>
             </div>
             <div class="coupon-myList-box">
                 <volist name="list" id="info">
-                    <a href="{:UC('Activity/couponUserDetail',array('id'=>$info['id']))}" class="coupon-myList-item">
+                    <a href="{:UC('User/couponUserDetail',array('id'=>$info['id']))}" class="coupon-myList-item">
                         <div class="flex">
                             <div class="coupon-name">{$info['amount']}<br>{$info['name']}</div>
                             <div class="flex-1 coupon-det" style="padding: 10px;">
@@ -26,10 +26,9 @@
                                         <else/>
                                         <span class="gray-text coupon-status">已失效</span>
                                     </if>
-                                    <span class="">点击可查看二维码</span>
+                                    <span class="coupon-myList-footer">点击查看二维码</span>
 
                                 </div>
-
 
                             </div>
                         </div>
