--- a/Application/Phone/View/Activity/couponList.html
+++ b/Application/Phone/View/Activity/couponList.html
@@ -13,7 +13,7 @@
 
                 <div class="activity-intro">
                     各商家劲爆优惠券出炉啦，赶紧叫上亲朋好友，拿起手机开抢吧。
-                    抢到优惠券后，可到“店多多”微信菜单中的<a href="{:UC('Activity/couponUser')}" external>“我的优惠券”</a>查看。<br>
+                    抢到优惠券后，可到“店多多”菜单中的<a href="{:UC('Activity/couponUser')}" external>“个人中心”->“我的优惠券”</a>查看。<br>
                     好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
                 </div>
 
