加入统计代码

--- a/Application/Phone/View/template/main.html
+++ b/Application/Phone/View/template/main.html
@@ -23,10 +23,13 @@
 
 </div>
 
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=56290858" charset="UTF-8"></script>
+
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src="__PUBLIC__/js/main.js?v=8" charset='utf-8'></script>
 <block name="script"></block>
+
 </body>
 </html>
