--- a/Public/css/shop.css
+++ b/Public/css/shop.css
@@ -5,6 +5,9 @@ body{background: #F0E7E4;padding-bottom: 10px;}
 .margin-top30{margin-top: 30px;}
 
 
+.row{display: block;}
+.col-50{display: inline-block;width: 48%;}
+
 .main-size{font-size: 16px;}
 .small-text{font-size: 12px;}
 
@@ -12,30 +15,53 @@ body{background: #F0E7E4;padding-bottom: 10px;}
 .text-right{text-align: right;}
 
 .orange-text{color: orange;}
+.green-text{color:#09BB07;}
 .blank-text{color: #000000;}
+.gray-text{color: #CCCCCC;}
+.red-text{color: #f00b0d;}
+.blue-text{color: #006699;}
 .main-color{color:#AF9083;}
 
 .panel{background: #FFFFFF;}
 
+.border-bottom{border-bottom: solid 1px #AF9083;}
+
 .box{padding: 10px;}
 .inline-box{width: 90%;margin: 0 auto;}
 
-.main-btn{width: 100%;background: #AF9083;color: #fff;border: none;text-align: center;padding: 10px;}
+.main-btn{display: block;background: #AF9083;color: #fff;border: none;text-align: center;padding: 10px;font-size: 16px;text-decoration: none;}
+.main-btn.disable{background: #a0a0a0;color: #e1e1e1;}
+.orange-btn{display: block;background: orange;color: #fff;border: none;text-align: center;padding: 10px;font-size: 16px;text-decoration: none;}
 
 .total-price-box{text-align: right;margin: 10px;}
 .bottom-tip{margin-top: 30px; font-size: 12px;color: #666666;text-align: center;}
 
+.select-box{width: 100%;border: none;padding: 10px;}
+.input-box{width: 100%;border: none;}
+
 .respImg{width: 100%;max-height: 180px;}
+
+.list{}
+.list .item{padding: 10px 0;border-bottom: solid 1px #AF9083;}
 
 .countBox{vertical-align: middle;}
 .countBox span{display: inline-block;background: #AF9083;color: #fff;width: 45px;line-height:40px;text-align: center;font-size: 18px;vertical-align: middle;}
 
+.order-item-box{display: block;text-decoration: none;}
+.order-item-box.disable *{color: #a0a0a0;}
+.order-item-header{border-bottom: solid 1px #e1e1e1;padding: 10px;}
+.order-item-footer{border-top: solid 1px #e1e1e1;padding: 10px;}
+.order-item-title{margin: 15px 0;}
+.order-item-goodsList > span{display: inline-block;color: #AF9083;}
+
+.order-flow-box{border-bottom: solid 1px #CCCCCC;padding: 10px 0;}
+
 .flex{
     /* 设置弹性布局 */
-    display:-webkit-box;/* android 2.1-3.0, ios 3.2-4.3 */
-    display:-webkit-flex;/* Chrome 21+ */
-    display:-ms-flexbox;/* WP IE 10 */
-    display:flex;/* android 4.4 */
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
+    display:flex;
 }
 .flex-direction-column{
     /* 设置弹性布局的方向，子元素按照在源文档中声明的顺序从上到下显示 */
@@ -71,4 +97,14 @@ body{background: #F0E7E4;padding-bottom: 10px;}
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
+}
+
+.iconfont{font-family:"iconfont";font-style:normal;}
+@font-face {
+    font-family: 'iconfont';
+    src: url('//at.alicdn.com/t/font_1463710045_3199966.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1463710045_3199966.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1463710045_3199966.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1463710045_3199966.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1463710045_3199966.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
