加入一些页面

--- a/Application/Phone/View/Goods/sureOrder.html
+++ b/Application/Phone/View/Goods/sureOrder.html
@@ -50,6 +50,7 @@
 
 <block name="script">
     <script>
+        wx.config(jsConfig);
         $('#selectAddress').click(function(){
             wx.openAddress({
                 success : function(res){
